# text_edit

./: CMakeLists.txt  README.md  Text.txt  buttton.h  main.cpp  text_backend.h
